Wed Apr 30 16:44:12 2003  Simon McQueen  <sm@prismtechnologies.com>

	* orbsvcs/orbsvcs/CosNotification_Static.dsp:

          Removed attic'ed files. 

Wed Apr 30 10:40:31 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* orbsvcs/orbsvcs/Event/EC_Kokyu_Dispatching.cpp:
	  Fixed compile errors for no exception builds on MSVC++.

Wed Apr 30 16:21:21 2003  Simon McQueen  <sm@prismtechnologies.com>

        * orbsvcs/orbsvcs/CosNotification_Static.dsp:

          Fixed output dir so stubs end up in the right place.

Wed Apr 30 15:25:35 2003  Simon McQueen  <sm@prismtechnologies.com>

        * tao/TAO_Static.dsp:
          Added IOP_IORC.* and IOP_CodecC.* to project to fix errors
          in static builds.

Wed Apr 30 07:26:37 2003  Chad Elliott  <elliott_c@ociweb.com>

        * TAO_IDL/ast/ast_decl.cpp:
        * TAO_IDL/ast/ast_type.cpp:
        * TAO_IDL/be/be_codegen.cpp:
        * TAO_IDL/be/be_helper.cpp:
        * TAO_IDL/be/be_interface.cpp:
        * TAO_IDL/be/be_interface_strategy.cpp:
        * TAO_IDL/be/be_visitor_interface/interface_ss.cpp:
        * TAO_IDL/be/be_visitor_typecode/typecode_defn.cpp:
        * TAO_IDL/be_include/be_helper.h:
        * TAO_IDL/driver/drv_args.cpp:
        * TAO_IDL/driver/drv_preproc.cpp:
        * TAO_IDL/fe/lex.yy.cpp:
        * TAO_IDL/include/idl_narrow.h:
        * TAO_IDL/include/utl_string.h:
        * TAO_IDL/util/utl_string.cpp:
        * orbsvcs/Naming_Service/Naming_Service.h:
        * orbsvcs/orbsvcs/AV/AVStreams_i.cpp:
        * orbsvcs/orbsvcs/AV/AV_Core.cpp:
        * orbsvcs/orbsvcs/AV/MCast.cpp:
        * orbsvcs/orbsvcs/AV/QoS_UDP.cpp:
        * orbsvcs/orbsvcs/AV/RTCP.cpp:
        * orbsvcs/orbsvcs/AV/RTCP_Channel.cpp:
        * orbsvcs/orbsvcs/AV/RTCP_Packet.cpp:
        * orbsvcs/orbsvcs/AV/RTP.cpp:
        * orbsvcs/orbsvcs/AV/TCP.cpp:
        * orbsvcs/orbsvcs/AV/UDP.cpp:
        * orbsvcs/orbsvcs/AV/sfp.cpp:
        * orbsvcs/orbsvcs/Event/Dispatching_Modules.i: